# COS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  bochsrc.txt  linker.ld
.github/workflows/: test_run.yml
go-nogo/: summary.md
go-nogo/Legal Documentation/: THIRD_PARTY_NOTICES.md
go-nogo/Technology Watch/: Technology_Watch.md
go-nogo/Technology Watch/Documentation/: mkdocs.yml
go-nogo/Technology Watch/Documentation/diagrams/: filesystem-definition.drawio
go-nogo/Technology Watch/Documentation/docs/: Home.md  Initialisation.md  Memory.md
go-nogo/Technology Watch/Documentation/docs/filesystem/: asm_functions.md
go-nogo/Technology Watch/Documentation/docs/initialisation/: 32bit_launching.md  higher_half_setup.md  idt_init.md
go-nogo/Technology Watch/Documentation/docs/memory/: physical.md  virtual.md
include/: types.h
include/kernel/: acpi.h  asm.h  cos_filesystem.h  cos_memory.h  cos_time.h  gdt.h  idt.h  interrupts.h  memory.h  multiboot.h  multiboot2.h  pci.h  vga.h
include/kernel/graphics/: bmp.h  font.h  screen.h
include/kernel/lib/: string.h
include/kernel/term/: commands.h  term.h  tty.h
isodir/boot/grub/: grub.cfg
src/boot/: cpu_state_functions.asm  header.asm  idt.asm  main.asm  main64.asm
src/kernel/: acpi.c  asm.c  gdt_handler.c  idt.c  interrupts.c  main.c  pci.c  stack_protection.c
src/kernel/graphics/: bmp.c  font.c  screen.c
src/kernel/lib/: cos_time.c  memory_functions.c  printf.c  string.c
src/kernel/term/: command.c  tty.c
src/kernel/term/commands/: cat.c  clear.c  launch.c  ls.c  lspci.c  move.c  ps.c  pwd.c  touch.c
test/src/: main.c
